argocd/applications/wikijs/db.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "wikijs"
    service: "wikijs-postgres"
  name: "wikijs-postgres"
  namespace: "wikijs"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "wikijs"

  template:
    metadata:
      labels:
        app: "wikijs"
        service: "wikijs-postgres"
      name: "wikijs-postgres"
      namespace: "wikijs"

    spec:
      containers:
        - name: "postgres"
          # tag v16.8-alpine3.21
          image: "postgres@sha256:3b057e1c2c6dfee60a30950096f3fab33be141dbb0fdd7af3d477083de94166c"
          imagePullPolicy: "IfNotPresent"

          ports:
            - name: "db"
              containerPort: 5432

          resources:
            requests:
              cpu: "20m"
              memory: "80Mi"

          volumeMounts:
            - name: "postgres-data"
              mountPath: "/var/lib/postgresql/data"

      imagePullSecrets:
        - name: "dockerhub-tlake-read-only"

      volumes:
        - name: "postgres-data"
          persistentVolumeClaim:
            claimName: "postgres-data"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: "wikijs"
    service: "wikijs-postgres"
  name: "wikijs-postgres"
  namespace: "wikijs"

spec:
  selector:
    app: "wikijs"
    service: "wikijs-postgres"
  ports:
    - name: "db"
      port: 5432
      protocol: TCP
      targetPort: "db"
