argocd/applications/wikijs/app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: "wikijs"
  labels:
    app: "wikijs"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "wikijs"

  template:
    metadata:
      labels:
        app: "wikijs"

    spec:
      containers:
        - name: "app"
          image: "ghcr.io/requarks/wiki:2"

          ports:
            - name: "app"
              containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: "wikijs"

spec:
  ports:
    - name: "http-traffic"
      port: 80
      targetPort: "app"

  selector:
    app: "wikijs"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: "wikijs-web"
  namespace: "wikijs"

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`wiki.tlake.io`)
      kind: Rule
      services:
        - name: "wikijs"
          port: "http-traffic"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: "wikijs-websecure"
  namespace: "wikijs"

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`wiki.tlake.io`)
      kind: Rule
      services:
        - name: "wikijs"
          port: "http-traffic"

  tls:
    certResolver: "staging"
